# yt-music-desktop

./: CMakeLists.txt  LICENSE  README.md
headers/: frame.h  title_bar.h  wx.h
src/: frame.cpp  main.cpp  title_bar.cpp
